--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,6 @@ jobs:
              sdkmanager --install "platforms;android-25"
              sdkmanager --install "build-tools;25.0.3"
              yes | sdkmanager --licenses
+             echo "sdk.dir=$HOME/.android/sdk"> local.properties
       - name: Build with Ant
         run: ant compile release
