--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,6 @@ jobs:
           optional-tasks: true
           version: '1.10.12' # Specify the Ant version you need
       - name: Damn debug
-      - run: ls ~/.android/sdk/tools/lib
+        run: ls ~/.android/sdk/tools/lib
       - name: Build with Ant
         run: ant compile release
